--- a/config/covariance_params.yaml
+++ b/config/covariance_params.yaml
@@ -1,3 +1,5 @@
+# Covariance matrices for EKF
+
 process_noise_covariance:
   - [3.69e-16, 0, 0, 0, 0, 0, 0, 0]
   - [0, 1.58e-16, 0, 0, 0, 0, 0, 0]
