--- a/config/initial_conditions.yaml
+++ b/config/initial_conditions.yaml
@@ -4,6 +4,7 @@ c_cl_0: 0.0
 c_so3_0: 0.0
 I0_185: 2.07e-6
 I0_254: 5.19e-4
+Intensity: 1.0
 t_r: 1200  # total reaction time
 n_batches: 10
 Vi: 0.450 # initial volume
